# goit-pythonweb-hw-03

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  error.html  index.html  main.py  message.html  pyproject.toml
storage/: data.json
templates/: read.html
